# gdiff

./: CHANGELOG.md  LICENSE  README  gdiff.cabal
Data/Generic/: Diff.hs
src/Data/Generic/: Diff.hs
